Fix z-index of header
the audio player controls sometimes went over top of the header, this was never noticed due to the amount of audio available, but this is fixed now

--- a/Wuikinuxv Learning App/src/MainRouter.css
+++ b/Wuikinuxv Learning App/src/MainRouter.css
@@ -4,6 +4,7 @@ header{
   left: 0;
   width: 100%;
   background-color: #950000; 
+  z-index: 1;
 }
 header nav{
   display: flex;
